feat: delete locker data in contract to save gas
