# docs/swagger.json
@@ -30,10 +30,31 @@
         },
         "parameters": [
           {
-            "name": "value",
+            "name": "rHash",
             "in": "query",
             "required": false,
             "type": "string"
+          },
+          {
+            "name": "confirmedHeight",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int64"
+          },
+          {
+            "name": "maxCount",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "gasTimes",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
           }
         ],
         "tags": [
@@ -108,6 +129,50 @@
             "required": false,
             "type": "boolean",
             "format": "boolean"
+          }
+        ],
+        "tags": [
+          "DebugAPI"
+        ]
+      }
+    },
+    "/debug/lockerInfosByDeletedState": {
+      "get": {
+        "operationId": "DebugAPI_LockerInfosByDeletedState",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protoLockerStatesResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "value",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "count",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
           }
         ],
         "tags": [
@@ -715,6 +780,10 @@
         "ethUserAddr": {
           "type": "string"
         },
+        "gasPrice": {
+          "type": "string",
+          "format": "int64"
+        },
         "neoTimeout": {
           "type": "boolean",
           "format": "boolean"
@@ -735,8 +804,7 @@
           "format": "boolean"
         },
         "deleted": {
-          "type": "boolean",
-          "format": "boolean"
+          "type": "string"
         },
         "deletedTime": {
           "type": "string"
